# lucatta-server

./: .gitignore  CMakeLists.txt  Dockerfile  compose.yml  schema.sql  vcpkg.json
build_vs/: CMakeCache.txt
data/: cpplinter.lua  global.lua
data/XML/: vocations.xml
data/actions/: actions.xml
data/events/: events.xml
data/items/: items.xml
data/migrations/: 37.lua
data/monster/: monsters.xml
data/movements/: movements.xml
data/npc/: Agent.xml  Alkor.xml  Anvil.xml  Beachnpc.xml  Carlos Matos.xml  Christopher.xml  Coder.xml  Desertnpc.xml  Forest NPC.xml  Fox.xml  Grimoire.xml  Guard.xml  Janet Yellen.xml  King.xml  Lavanpc.xml  Merchant.xml  Nyan.xml  Octocat.xml  Olaf.xml  Paul.xml  Priest.xml  Rick.xml  Satoshi.xml  Scientist.xml  Sorcerer.xml  Victor.xml  Villager.xml
data/scripts/: dailygift.lua  tile_widgets.lua  waypoints.lua
src/: CMakeLists.txt  actions.cpp  appearance_catalog.cpp  appearance_catalog.h  configmanager.cpp  configmanager.h  connection.cpp  connection.h  connection_io.cpp  connection_io.h  const.h  container.cpp  container.h  creature.cpp  creature.h  definitions.h  depotchest.cpp  depotchest.h  enums.h  fileloader.h  game.cpp  game.h  httpclient.cpp  iomap.cpp  item.cpp  item.h  items.cpp  items.h  luascript.cpp  luascript.h  main.cpp  map.h  monster.cpp  monsters.cpp  movement.cpp  networkmessage.cpp  networkmessage.h  npc.cpp  npc.h  otserv.cpp  (+21 more)
src/http/: login.h  (+7 more)
src/protobuf/: CMakeLists.txt  appearances.proto
tools/: export_content.mjs  export_nbq_content.mjs  export_world_binary.mjs
vc17/: theforgottenserver.vcxproj
(+348 files in other folders)
